syntax = "proto3";
option go_package ="github.com/wenchangshou2/vd-node-manage/pb";
import "google/protobuf/wrappers.proto";

service ResourceManagement {
	rpc GetResourceDetailedInfo (google.protobuf.UInt32Value) returns (GetResourceDetailedInfoResponse);
}
message GetResourceDetailedInfoResponse{
	uint32 ID = 1;
	string name = 2;
	string category =3;
	message File {
		int32 ID = 1;
		string name =2;
		int64 size =3;
		string url = 4;
		string sourceName = 5;
		string uuid =6;
	}
	File file=4;
}